log
Fri 15 Sep 2023 07:47:28 PM UTC: 
 treemap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c:49:1: error: expected identifier or ‘(’ before ‘}’ token
   49 | }
      | ^
Compilation failed
d850e24
